# kidscalc

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp.yml
app/: CMakeLists.txt  main.cpp
app/cmd/: CMakeLists.txt  main.cpp
app/gui/: CMakeLists.txt  gameparam.cpp  gameparam.h  gameparam.ui  imagewidget.cpp  imagewidget.h  imagewidget.ui  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt
lib/inc/: factories.h  play.h  question.h  task.h
lib/src/: factories.cpp  play.cpp  question.cpp  task.cpp
lib/test/: main.cpp  t_factories.cpp  t_play.cpp  t_question.cpp  t_task.cpp
